test/fail/error_optional_parameter_unify2.sest
module ErrorOptionalParameterUnify2 = struct

  val g1(?foo nopt) = {nopt, None}

  val g2(?foo nopt, ?bar bopt) = {nopt, bopt}

  val g(flag) = if flag then g1 else g2

end
